===========================
Isotope eCommerce Changelog
===========================

Version 1.3.beta2 (2011-??-??)
------------------------------
- Added: runonce script will automatically generate groups based on categories (pages)
- Improved: Allow subclasses of ModuleIsotopeProductFilter for filter modules
- Improved: Allow subclasses of ModuleIsotopeProductFilter to cache request
- Improved: new function generateRequestUrl to remove GET-parameters from request string
- Improved backend product list, no more "limit" option but can search & filter through all products and variants and translations (Ticket #495)
- Fixed a bug in runonce script preventing the database file from being refreshed
- Fixed a bug with Contao 2.10 and the new foreignKey implementation

Version 1.3.beta1 (2011-07-18)
------------------------------
- Added: "advanced prices". Allow to define a prices for store configs, member groups, start/stop dates
- Added: availability check for products
- Added: new "field wizard" to set up address fields with custom label and mandatory option in store configuration
- Added: option the define a custom template folder for each store configuration
- Added: store config option to limit tl_member countries to billing and shipping countries
- Added: new IsotopeOrder class, checkout can now be done from postsale request
- Added: button to duplicate the fallback language to a language record
- Added: multi-edit support for products and variant data
- Added: minimum order subtotal amount (store config option)
- Added: sku to email product template
- Added: iso_checkout_order_conditions template
- Added: productTree widget, similar to pageTree but for products/variants
- Added: "tableless" option for checkout module (Ticket #325)
- Added ability to apply a rule to a product variant
- Added: Copy child records (variants, languages) when copying a product
- Added: Allow foreignKey for variant attribute options