@@ -5,6 +5,7 @@ Isotope eCommerce Changelog
 Version 1.3.beta2 (2011-??-??)
 ------------------------------
 - Added: runonce script will automatically generate groups based on categories (pages)
+- Added support for multilingual foreignKey in attribute table
 - Improved: Allow subclasses of ModuleIsotopeProductFilter for filter modules
 - Improved: Allow subclasses of ModuleIsotopeProductFilter to cache request
 - Improved: new function generateRequestUrl to remove GET-parameters from request string
